Fixes missing padding on notifications

--- a/src/components/nav-bar/nav-bar.less
+++ b/src/components/nav-bar/nav-bar.less
@@ -264,6 +264,8 @@ nav-bar {
         border-width: 0 0 1px 0;
         border-color: @gray-lighter;
         margin-bottom: 0;
+        padding-left: 10px;
+        padding-right: 10px;
         .btn-link {
           color: @link-color;
           &:hover {
